Now uses <type>.valueOf() methods wherever possible so that internally cached value objects will be used (CASTOR-3029).